@@ -38,7 +38,8 @@ import ee.ria.xroad.common.util.CryptoUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.niis.xroad.common.acme.AcmeService;
-import org.niis.xroad.common.exception.ServiceException;
+import org.niis.xroad.common.exception.BadRequestException;
+import org.niis.xroad.common.exception.InternalServerErrorException;
 import org.niis.xroad.globalconf.GlobalConfProvider;
 import org.niis.xroad.globalconf.model.ApprovedCAInfo;
 import org.niis.xroad.restapi.config.audit.AuditDataHelper;
@@ -46,9 +47,7 @@ import org.niis.xroad.restapi.config.audit.AuditEventHelper;
 import org.niis.xroad.restapi.config.audit.RestApiAuditEvent;
 import org.niis.xroad.restapi.config.audit.RestApiAuditProperty;
 import org.niis.xroad.restapi.exceptions.DeviationAwareRuntimeException;
-import org.niis.xroad.restapi.openapi.InternalServerErrorException;
 import org.niis.xroad.restapi.util.SecurityHelper;
-import org.niis.xroad.securityserver.restapi.exceptions.ErrorMessage;
 import org.niis.xroad.securityserver.restapi.repository.ClientRepository;
 import org.niis.xroad.securityserver.restapi.util.MailNotificationHelper;
 import org.niis.xroad.serverconf.ServerConfProvider;
@@ -78,7 +77,10 @@ import java.util.stream.Collectors;
 import static ee.ria.xroad.common.util.CertUtils.getCommonName;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.niis.xroad.common.exception.util.CommonDeviationMessage.INTERNAL_ERROR;
+import static org.niis.xroad.securityserver.restapi.exceptions.ErrorMessage.AUTH_CERT_NOT_SUPPORTED;
 import static org.niis.xroad.securityserver.restapi.exceptions.ErrorMessage.CERTIFICATE_NOT_FOUND_WITH_ID;
+import static org.niis.xroad.securityserver.restapi.exceptions.ErrorMessage.CERTIFICATE_WRONG_USAGE;
+import static org.niis.xroad.securityserver.restapi.exceptions.ErrorMessage.SIGN_CERT_NOT_SUPPORTED;
 
 /**
  * token certificate service
@@ -117,7 +119,6 @@ public class TokenCertificateService {
 
     /**
      * Create a CSR
-     *
      * @param keyId
      * @param memberId
      * @param keyUsage
@@ -138,11 +139,11 @@ public class TokenCertificateService {
                                                                         String caName, Map<String, String> subjectFieldValues,
                                                                         CertificateRequestFormat format, Boolean isAcmeOrder)
             throws CertificateAuthorityNotFoundException, ClientNotFoundException,
-            WrongKeyUsageException,
-            KeyNotFoundException,
-            DnFieldHelper.InvalidDnParameterException, ActionNotPossibleException,
-            CertificateAlreadyExistsException, GlobalConfOutdatedException, CsrNotFoundException,
-            WrongCertificateUsageException, InvalidCertificateException, AuthCertificateNotSupportedException {
+                   WrongKeyUsageException,
+                   KeyNotFoundException,
+                   DnFieldHelper.InvalidDnParameterException, ActionNotPossibleException,
+                   CertificateAlreadyExistsException, GlobalConfOutdatedException, CsrNotFoundException,
+                   WrongCertificateUsageException, InvalidCertificateException, AuthCertificateNotSupportedException {
 
         // validate key and memberId existence
         TokenInfo tokenInfo = tokenService.getTokenForKeyId(keyId);
@@ -176,12 +177,7 @@ public class TokenCertificateService {
                     tokenInfo, key);
         }
 
-        CertificateProfileInfo profile = null;
-        try {
-            profile = certificateAuthorityService.getCertificateProfile(caName, keyUsage, memberId, false);
-        } catch (CertificateProfileInstantiationException e) {
-            throw new DeviationAwareRuntimeException(e, e.getErrorDeviation());
-        }
+        CertificateProfileInfo profile = certificateAuthorityService.getCertificateProfile(caName, keyUsage, memberId, false);
 
         String subjectAltName = null;
         if (subjectFieldValues.get(DN_SUBJECT_ALT_NAME) != null
@@ -208,7 +204,7 @@ public class TokenCertificateService {
         } catch (CodedException e) {
             throw e;
         } catch (Exception e) {
-            throw new ServiceException(INTERNAL_ERROR, e, "Generate cert request failed");
+            throw new InternalServerErrorException("Generate cert request failed", e, INTERNAL_ERROR.build());
         }
         if (isAcmeOrder && caInfo.getAcmeServerDirectoryUrl() != null) {
             acmeOrderAndImportCert(memberId, keyUsage, subjectFieldValues, subjectAltName, caInfo, generatedCertRequestInfo);
@@ -223,7 +219,7 @@ public class TokenCertificateService {
                                         ApprovedCAInfo caInfo,
                                         SignerRpcClient.GeneratedCertRequestInfo generatedCertRequestInfo)
             throws GlobalConfOutdatedException, KeyNotFoundException, InvalidCertificateException, CertificateAlreadyExistsException,
-            WrongCertificateUsageException, CsrNotFoundException, AuthCertificateNotSupportedException, ClientNotFoundException {
+                   WrongCertificateUsageException, CsrNotFoundException, AuthCertificateNotSupportedException, ClientNotFoundException {
         String memberEncodedId = keyUsage == KeyUsageInfo.SIGNING
                 ? memberId.asEncodedId()
                 : serverConfProvider.getIdentifier().getOwner().asEncodedId();
@@ -232,7 +228,7 @@ public class TokenCertificateService {
         if (chain != null) {
             log.info("Acme order was successful, importing certificate");
             try {
-                importCertificate(chain.get(0).getEncoded(), false, true);
+                importCertificate(chain.getFirst().getEncoded(), false, true);
             } catch (CertificateEncodingException e) {
                 throw new InvalidCertificateException(e);
             }
@@ -247,7 +243,6 @@ public class TokenCertificateService {
      * <p>
      * Permissions and possible actions use the values for generate csr,
      * there are no separate values for this operation.
-     *
      * @param keyId
      * @param csrId
      * @param format
@@ -292,13 +287,12 @@ public class TokenCertificateService {
         } catch (CodedException e) {
             throw e;
         } catch (Exception e) {
-            throw new ServiceException(INTERNAL_ERROR, e, "Regenerate cert request failed");
+            throw new InternalServerErrorException("Regenerate cert request failed", e, INTERNAL_ERROR.build());
         }
     }
 
     /**
      * Find an existing cert from a token by its hash
-     *
      * @param hash cert hash of an existing cert. Will be transformed to lowercase
      * @return
      * @throws CertificateNotFoundException
@@ -313,7 +307,7 @@ public class TokenCertificateService {
             }
             throw e;
         } catch (Exception e) {
-            throw new ServiceException(INTERNAL_ERROR, e, "error getting certificate");
+            throw new InternalServerErrorException("Error getting certificate", e, INTERNAL_ERROR.build());
         }
         return certificateInfo;
     }
@@ -321,7 +315,6 @@ public class TokenCertificateService {
     /**
      * Find an existing cert from a token (e.g. HSM) by cert hash and import it to keyconf.xml. This enables the cert
      * to be used for signing messages.
-     *
      * @param hash cert hash of an existing cert
      * @return CertificateInfo
      * @throws CertificateNotFoundException
@@ -337,10 +330,10 @@ public class TokenCertificateService {
      */
     public CertificateInfo importCertificateFromToken(String hash)
             throws CertificateNotFoundException, InvalidCertificateException,
-            GlobalConfOutdatedException, KeyNotFoundException,
-            CertificateAlreadyExistsException, WrongCertificateUsageException,
-            ClientNotFoundException, CsrNotFoundException,
-            AuthCertificateNotSupportedException, ActionNotPossibleException {
+                   GlobalConfOutdatedException, KeyNotFoundException,
+                   CertificateAlreadyExistsException, WrongCertificateUsageException,
+                   ClientNotFoundException, CsrNotFoundException,
+                   AuthCertificateNotSupportedException, ActionNotPossibleException {
         CertificateInfo certificateInfo = getCertificateInfo(hash);
 
         TokenInfoAndKeyId tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateHash(hash);
@@ -363,7 +356,6 @@ public class TokenCertificateService {
      * - clientId (if sign cert),
      * - cert hash and cert hash algo
      * - key usage
-     *
      * @param certificateBytes
      * @param isFromToken      whether the cert was read from a token or not
      * @return CertificateInfo
@@ -376,8 +368,8 @@ public class TokenCertificateService {
      */
     private CertificateInfo importCertificate(byte[] certificateBytes, boolean isFromToken, boolean isAcme)
             throws GlobalConfOutdatedException, KeyNotFoundException, InvalidCertificateException,
-            CertificateAlreadyExistsException, WrongCertificateUsageException, CsrNotFoundException,
-            AuthCertificateNotSupportedException, ClientNotFoundException {
+                   CertificateAlreadyExistsException, WrongCertificateUsageException, CsrNotFoundException,
+                   AuthCertificateNotSupportedException, ClientNotFoundException {
         globalConfService.verifyGlobalConfValidity();
         X509Certificate x509Certificate = convertToX509Certificate(certificateBytes);
         CertificateInfo certificateInfo = null;
@@ -459,7 +451,6 @@ public class TokenCertificateService {
 
     /**
      * Convert cert bytes to X509Certificate, throw InvalidCertificateException if not possible
-     *
      * @throws InvalidCertificateException if bytes did not represent a valid X509Certificate
      */
     public X509Certificate convertToX509Certificate(byte[] certificateBytes) throws InvalidCertificateException {
@@ -474,27 +465,25 @@ public class TokenCertificateService {
 
     /**
      * Activates certificate
-     *
      * @param hash
      * @throws CertificateNotFoundException if cert with given hash was not found
      * @throws AccessDeniedException        if user did not have correct permission for (de)activate
      * @throws ActionNotPossibleException   if cannot (de)activate
      */
     public void activateCertificate(String hash) throws CertificateNotFoundException,
-            AccessDeniedException, ActionNotPossibleException {
+                                                        AccessDeniedException, ActionNotPossibleException {
         changeCertificateActivation(hash, true);
     }
 
     /**
      * Deactivates certificate
-     *
      * @param hash
      * @throws CertificateNotFoundException if cert with given hash was not found
      * @throws AccessDeniedException        if user did not have correct permission for (de)activate
      * @throws ActionNotPossibleException   if cannot (de)activate
      */
     public void deactivateCertificate(String hash) throws CertificateNotFoundException, AccessDeniedException,
-            ActionNotPossibleException {
+                                                          ActionNotPossibleException {
         changeCertificateActivation(hash, false);
     }
 
@@ -502,8 +491,8 @@ public class TokenCertificateService {
      * Deactivates or activates certificate
      */
     private void changeCertificateActivation(String hash, boolean activate) throws CertificateNotFoundException,
-            AccessDeniedException,
-            ActionNotPossibleException {
+                                                                                   AccessDeniedException,
+                                                                                   ActionNotPossibleException {
 
         // verify correct authority
         CertificateInfo certificateInfo = getCertificateInfo(hash);
@@ -543,26 +532,20 @@ public class TokenCertificateService {
             }
         } catch (Exception e) {
             var action = activate ? "activation" : "deactivation";
-            throw new ServiceException(INTERNAL_ERROR, e, "certificate %s failed".formatted(action));
+            throw new InternalServerErrorException("Certificate %s failed".formatted(action), e, INTERNAL_ERROR.build());
         }
     }
 
     /**
      * Adds audit log data for basic token, key and cert details.
      * Executes a new signer request to find out token and key details.
-     *
      * @param fullKeyDetails true: full key details are added false: only key id is added
      * @throws CertificateNotFoundException
      */
     private void auditLogTokenKeyAndCert(String hash, CertificateInfo certificateInfo, boolean fullKeyDetails)
             throws CertificateNotFoundException {
-        TokenInfoAndKeyId tokenInfoAndKeyId = null;
-        try {
-            tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateHash(hash);
-        } catch (KeyNotFoundException e) {
-            // key not found for a cert that exists, should not be possible
-            throw new RuntimeException(e);
-        }
+        TokenInfoAndKeyId tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateHash(hash);
+
         TokenInfo tokenInfo = tokenInfoAndKeyId.getTokenInfo();
         KeyInfo keyInfo = tokenInfoAndKeyId.getKeyInfo();
         auditDataHelper.put(tokenInfo);
@@ -578,7 +561,6 @@ public class TokenCertificateService {
     /**
      * Import a cert from given bytes. If importing an existing cert from a token use
      * {@link #importCertificateFromToken(String hash)}
-     *
      * @param certificateBytes
      * @return CertificateInfo
      * @throws GlobalConfOutdatedException
@@ -591,15 +573,14 @@ public class TokenCertificateService {
      */
     public CertificateInfo importCertificate(byte[] certificateBytes)
             throws InvalidCertificateException, GlobalConfOutdatedException,
-            KeyNotFoundException, CertificateAlreadyExistsException,
-            WrongCertificateUsageException, ClientNotFoundException, CsrNotFoundException,
-            AuthCertificateNotSupportedException {
+                   KeyNotFoundException, CertificateAlreadyExistsException,
+                   WrongCertificateUsageException, ClientNotFoundException, CsrNotFoundException,
+                   AuthCertificateNotSupportedException {
         return importCertificate(certificateBytes, false, false);
     }
 
     /**
      * Check user authority to the given certificate
-     *
      * @param certificateBytes
      * @throws InvalidCertificateException if bytes were not valid cert
      * @throws AccessDeniedException       if no authority to activate or disable cert
@@ -626,7 +607,6 @@ public class TokenCertificateService {
     /**
      * Check if given certificate is a valid auth cert. Any exceptions (such as missing key usage extension)
      * while processing result in a logged warning and return false
-     *
      * @param x509Certificate the certificate
      */
     public boolean isValidAuthCert(X509Certificate x509Certificate) {
@@ -641,7 +621,6 @@ public class TokenCertificateService {
     /**
      * Check if given certificate is a valid sign cert. Any exceptions (such as missing key usage extension)
      * while processing result in a logged warning and return false
-     *
      * @param x509Certificate the certificate
      */
     public boolean isValidSignCert(X509Certificate x509Certificate) {
@@ -656,7 +635,6 @@ public class TokenCertificateService {
 
     /**
      * Returns the given certificate owner's client ID.
-     *
      * @param instanceIdentifier instance identifier of the owner
      * @param cert               the certificate
      * @return certificate owner's client ID
@@ -678,7 +656,6 @@ public class TokenCertificateService {
 
     /**
      * Verify if action can be performed on cert
-     *
      * @param action
      * @param certificateInfo
      * @param hash
@@ -696,7 +673,6 @@ public class TokenCertificateService {
 
     /**
      * Send the authentication certificate registration request to central server
-     *
      * @param hash                  certificate hash
      * @param securityServerAddress IP address or DNS name of the security server
      * @throws CertificateNotFoundException
@@ -708,8 +684,8 @@ public class TokenCertificateService {
      */
     public void registerAuthCert(String hash, String securityServerAddress)
             throws CertificateNotFoundException, GlobalConfOutdatedException,
-            InvalidCertificateException, SignCertificateNotSupportedException,
-            KeyNotFoundException, ActionNotPossibleException {
+                   InvalidCertificateException, SignCertificateNotSupportedException,
+                   KeyNotFoundException, ActionNotPossibleException {
         CertificateInfo certificateInfo = getCertificateInfo(hash);
         auditLogTokenKeyAndCert(hash, certificateInfo, false);
         verifyAuthCert(certificateInfo);
@@ -721,17 +697,16 @@ public class TokenCertificateService {
             auditDataHelper.putManagementRequestId(requestId);
             auditDataHelper.put(RestApiAuditProperty.CERT_STATUS, CertificateInfo.STATUS_REGINPROG);
             signerRpcClient.setCertStatus(certificateInfo.getId(), CertificateInfo.STATUS_REGINPROG);
-        } catch (GlobalConfOutdatedException | CodedException e) {
+        } catch (DeviationAwareRuntimeException | CodedException e) {
             throw e;
         } catch (Exception e) {
-            throw new ServiceException(INTERNAL_ERROR, e, "Could not register auth cert");
+            throw new InternalServerErrorException("Could not register auth cert", e, INTERNAL_ERROR.build());
         }
     }
 
     /**
      * Send the authentication certificate deletion request to central server and set the cert status to
      * {@link CertificateInfo#STATUS_DELINPROG}
-     *
      * @param hash           certificate hash
      * @param skipUnregister whether to skip the actual delete request and only change cert status
      * @throws SignCertificateNotSupportedException
@@ -744,8 +719,8 @@ public class TokenCertificateService {
      */
     private void unregisterAuthCertAndMarkForDeletion(String hash, boolean skipUnregister)
             throws CertificateNotFoundException, GlobalConfOutdatedException,
-            InvalidCertificateException, SignCertificateNotSupportedException, KeyNotFoundException,
-            ActionNotPossibleException, ManagementRequestSendingFailedException {
+                   InvalidCertificateException, SignCertificateNotSupportedException, KeyNotFoundException,
+                   ActionNotPossibleException, ManagementRequestSendingFailedException {
         CertificateInfo certificateInfo = getCertificateInfo(hash);
         auditLogTokenKeyAndCert(hash, certificateInfo, false);
         verifyAuthCert(certificateInfo);
@@ -762,14 +737,13 @@ public class TokenCertificateService {
             throw e;
         } catch (Exception e) {
             // this means that cert was not found (which has been handled already) or some Akka error
-            throw new ServiceException(INTERNAL_ERROR, e, "Could not change auth cert status");
+            throw new InternalServerErrorException("Could not change auth cert status", e, INTERNAL_ERROR.build());
         }
     }
 
     /**
      * Send the authentication certificate deletion request to central server and set cert status to
      * {@link CertificateInfo#STATUS_DELINPROG}
-     *
      * @param hash certificate hash
      * @throws SignCertificateNotSupportedException
      * @throws ActionNotPossibleException
@@ -781,15 +755,14 @@ public class TokenCertificateService {
      */
     public void unregisterAuthCert(String hash)
             throws SignCertificateNotSupportedException, ActionNotPossibleException,
-            GlobalConfOutdatedException, InvalidCertificateException,
-            KeyNotFoundException, CertificateNotFoundException,
-            ManagementRequestSendingFailedException {
+                   GlobalConfOutdatedException, InvalidCertificateException,
+                   KeyNotFoundException, CertificateNotFoundException,
+                   ManagementRequestSendingFailedException {
         unregisterAuthCertAndMarkForDeletion(hash, false);
     }
 
     /**
      * Set the authentication certificate status to {@link CertificateInfo#STATUS_DELINPROG}
-     *
      * @param hash certificate hash
      * @throws SignCertificateNotSupportedException
      * @throws ActionNotPossibleException
@@ -800,14 +773,10 @@ public class TokenCertificateService {
      */
     public void markAuthCertForDeletion(String hash)
             throws SignCertificateNotSupportedException, ActionNotPossibleException,
-            GlobalConfOutdatedException, InvalidCertificateException,
-            KeyNotFoundException, CertificateNotFoundException {
-        try {
-            unregisterAuthCertAndMarkForDeletion(hash, true);
-        } catch (ManagementRequestSendingFailedException e) {
-            // should never happen
-            throw new RuntimeException("Management request failed", e);
-        }
+                   GlobalConfOutdatedException, InvalidCertificateException,
+                   KeyNotFoundException, CertificateNotFoundException {
+
+        unregisterAuthCertAndMarkForDeletion(hash, true);
     }
 
     private void verifyAuthCert(CertificateInfo certificateInfo)
@@ -829,7 +798,6 @@ public class TokenCertificateService {
 
     /**
      * Helper to translate caught {@link CodedException CodedExceptions}
-     *
      * @param e
      * @throws CertificateAlreadyExistsException
      * @throws InvalidCertificateException
@@ -839,8 +807,8 @@ public class TokenCertificateService {
      */
     private void translateCodedExceptions(SignerException e)
             throws CertificateAlreadyExistsException, InvalidCertificateException,
-            WrongCertificateUsageException, CsrNotFoundException,
-            KeyNotFoundException {
+                   WrongCertificateUsageException, CsrNotFoundException,
+                   KeyNotFoundException {
         if (e.isCausedByDuplicateCertificate()) {
             throw new CertificateAlreadyExistsException(e);
         } else if (e.isCausedByIncorrectCertificate()) {
@@ -858,7 +826,6 @@ public class TokenCertificateService {
 
     /**
      * Return possible actions for one cert
-     *
      * @param hash
      * @return
      * @throws CertificateNotFoundException
@@ -872,18 +839,13 @@ public class TokenCertificateService {
      * Return possible actions for one csr
      * Key not found exceptions are wrapped as RuntimeExceptions
      * since them happening is considered to be internal error.
-     *
      * @throws CsrNotFoundException
      */
     public EnumSet<PossibleActionEnum> getPossibleActionsForCsr(
             String csrId) throws CsrNotFoundException {
 
-        TokenInfoAndKeyId tokenInfoAndKeyId = null;
-        try {
-            tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateRequestId(csrId);
-        } catch (KeyNotFoundException e) {
-            throw new RuntimeException("internal error", e);
-        }
+        TokenInfoAndKeyId tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateRequestId(csrId);
+
         TokenInfo tokenInfo = tokenInfoAndKeyId.getTokenInfo();
 
         return possibleActionsRuleEngine.getPossibleCsrActions(tokenInfo);
@@ -897,7 +859,6 @@ public class TokenCertificateService {
      * instead to determine correct KeyInfo.
      * Key not found exceptions are wrapped as RuntimeExceptions
      * since them happening is considered to be internal error.
-     *
      * @param hash            certificate hash
      * @param certificateInfo
      * @param keyInfo
@@ -914,18 +875,14 @@ public class TokenCertificateService {
             certificateInfo = getCertificateInfo(hash);
         }
 
-        try {
-            if (tokenInfo == null) {
-                TokenInfoAndKeyId tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateHash(hash);
-                tokenInfo = tokenInfoAndKeyId.getTokenInfo();
-                keyInfo = tokenInfoAndKeyId.getKeyInfo();
-            }
-            if (keyInfo == null) {
-                String keyId = getKeyIdForCertificateHash(hash);
-                keyInfo = keyService.getKey(keyId);
-            }
-        } catch (KeyNotFoundException e) {
-            throw new RuntimeException("internal error", e);
+        if (tokenInfo == null) {
+            TokenInfoAndKeyId tokenInfoAndKeyId = tokenService.getTokenAndKeyIdForCertificateHash(hash);
+            tokenInfo = tokenInfoAndKeyId.getTokenInfo();
+            keyInfo = tokenInfoAndKeyId.getKeyInfo();
+        }
+        if (keyInfo == null) {
+            String keyId = getKeyIdForCertificateHash(hash);
+            keyInfo = keyService.getKey(keyId);
         }
 
         return possibleActionsRuleEngine.
@@ -934,7 +891,6 @@ public class TokenCertificateService {
 
     /**
      * Deletes a collection of certificates
-     *
      * @throws CertificateNotFoundException if certificate with given hash was not found
      * @throws ActionNotPossibleException   if delete was not possible due to cert/key/token states
      */
@@ -965,7 +921,6 @@ public class TokenCertificateService {
 
     /**
      * Delete certificate with given hash
-     *
      * @param hash
      * @throws CertificateNotFoundException if certificate with given hash was not found
      * @throws KeyNotFoundException         if for some reason the key linked to the cert could not
@@ -973,7 +928,7 @@ public class TokenCertificateService {
      * @throws ActionNotPossibleException   if delete was not possible due to cert/key/token states
      */
     public void deleteCertificate(String hash) throws CertificateNotFoundException, KeyNotFoundException,
-            ActionNotPossibleException {
+                                                      ActionNotPossibleException {
         hash = hash.toLowerCase();
         CertificateInfo certificateInfo = getCertificateInfo(hash);
         if (certificateInfo.isSavedToConfiguration()) {
@@ -993,7 +948,6 @@ public class TokenCertificateService {
 
     /**
      * Delete certificate with given hash
-     *
      * @throws CertificateNotFoundException if signer could not find the cert
      * @throws ActionNotPossibleException   if delete was not possible due to cert/key/token states
      */
@@ -1013,18 +967,17 @@ public class TokenCertificateService {
             signerRpcClient.deleteCert(certificateInfo.getId());
         } catch (CodedException e) {
             if (e instanceof SignerException se && se.isCausedByCertNotFound()) {
-                throw new CertificateNotFoundException(CERTIFICATE_NOT_FOUND_WITH_ID, e, certificateInfo.getId());
+                throw new CertificateNotFoundException(e, CERTIFICATE_NOT_FOUND_WITH_ID.build(certificateInfo.getId()));
             } else {
                 throw e;
             }
         } catch (Exception other) {
-            throw new ServiceException(INTERNAL_ERROR, other, "deleting a csr failed");
+            throw new InternalServerErrorException("Deleting a CSR failed", other, INTERNAL_ERROR.build());
         }
     }
 
     /**
      * Return key id for a key containing a cert with given hash
-     *
      * @throws CertificateNotFoundException if no match found
      */
     public String getKeyIdForCertificateHash(String hash) throws CertificateNotFoundException {
@@ -1037,13 +990,12 @@ public class TokenCertificateService {
                 throw e;
             }
         } catch (Exception e) {
-            throw new ServiceException(INTERNAL_ERROR, e, "error getting certificate");
+            throw new InternalServerErrorException("Error getting certificate", e, INTERNAL_ERROR.build());
         }
     }
 
     /**
      * Deletes one csr
-     *
      * @param csrId
      * @throws KeyNotFoundException       if for some reason the key linked to the csr could not
      *                                    be loaded (should not be possible)
@@ -1051,7 +1003,7 @@ public class TokenCertificateService {
      * @throws ActionNotPossibleException if delete was not possible due to csr/key/token states
      */
     public void deleteCsr(String csrId) throws KeyNotFoundException, CsrNotFoundException,
-            ActionNotPossibleException {
+                                               ActionNotPossibleException {
 
         // different audit fields for these events
         if (auditDataHelper.dataIsForEvent(RestApiAuditEvent.DELETE_ORPHANS)) {
@@ -1088,7 +1040,7 @@ public class TokenCertificateService {
                 throw e;
             }
         } catch (Exception other) {
-            throw new ServiceException(INTERNAL_ERROR, other, "deleting a csr failed");
+            throw new InternalServerErrorException("Deleting a CSR failed", other, INTERNAL_ERROR.build());
         }
     }
 
@@ -1097,9 +1049,9 @@ public class TokenCertificateService {
      */
     public void orderAcmeCertificate(String caName, String csrId, KeyUsageInfo keyUsage)
             throws CertificateAuthorityNotFoundException, CsrNotFoundException, KeyNotFoundException,
-            ActionNotPossibleException, CertificateAlreadyExistsException, ClientNotFoundException,
-            GlobalConfOutdatedException, WrongCertificateUsageException, InvalidCertificateException,
-            AuthCertificateNotSupportedException {
+                   ActionNotPossibleException, CertificateAlreadyExistsException, ClientNotFoundException,
+                   GlobalConfOutdatedException, WrongCertificateUsageException, InvalidCertificateException,
+                   AuthCertificateNotSupportedException {
         auditDataHelper.put(RestApiAuditProperty.KEY_USAGE, keyUsage);
         auditDataHelper.put(RestApiAuditProperty.CERTIFICATION_SERVICE_NAME, caName);
 
@@ -1143,7 +1095,6 @@ public class TokenCertificateService {
 
     /**
      * Finds csr with matching id from KeyInfo, or throws {@link CsrNotFoundException}
-     *
      * @throws CsrNotFoundException
      */
     private CertRequestInfo getCsr(KeyInfo keyInfo, String csrId) throws CsrNotFoundException {
@@ -1159,27 +1110,27 @@ public class TokenCertificateService {
     /**
      * Cert usage info is wrong (e.g. cert is both auth and sign or neither)
      */
-    public static class WrongCertificateUsageException extends ServiceException {
+    public static class WrongCertificateUsageException extends InternalServerErrorException {
         public WrongCertificateUsageException(Throwable t) {
-            super(ErrorMessage.CERTIFICATE_WRONG_USAGE, t);
+            super(t, CERTIFICATE_WRONG_USAGE.build());
         }
     }
 
     /**
      * Probably a rare case of when importing an auth cert from an HSM
      */
-    public static class AuthCertificateNotSupportedException extends ServiceException {
+    public static class AuthCertificateNotSupportedException extends InternalServerErrorException {
         public AuthCertificateNotSupportedException(String msg) {
-            super(ErrorMessage.AUTH_CERT_NOT_SUPPORTED, msg);
+            super(AUTH_CERT_NOT_SUPPORTED.build(msg));
         }
     }
 
     /**
      * When trying to register a sign cert
      */
-    public static class SignCertificateNotSupportedException extends ServiceException {
+    public static class SignCertificateNotSupportedException extends BadRequestException {
         public SignCertificateNotSupportedException(String msg) {
-            super(ErrorMessage.SIGN_CERT_NOT_SUPPORTED, msg);
+            super(SIGN_CERT_NOT_SUPPORTED.build(msg));
         }
     }
 }
